--- a/quotes/templates/quotes/base.html
+++ b/quotes/templates/quotes/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quotes App</title>
-    <link rel="stylesheet" href="{% static 'quotes/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'quotes/styles1.css' %}">
 </head>
 <body>
     <header>
