--- a/quotes/templates/quotes/quote.html
+++ b/quotes/templates/quotes/quote.html
@@ -4,5 +4,5 @@
 {% block content %}
     <h2>Quote of the Day</h2>
     <p>"{{ quote }}"</p>
-    <img src="{{ image }}" alt="Muhammad Ali" style="width: 300px; height: auto;">
+    <img src="{% static  image  %}" alt="Muhammad Ali" style="width: 300px; height: auto;">
 {% endblock %}
