--- a/quotes/templates/quotes/show_all.html
+++ b/quotes/templates/quotes/show_all.html
@@ -11,6 +11,6 @@
     
     <h2>All Images</h2>
     {% for image in images %}
-        <img src="{{ image }}" alt="Muhammad Ali" style="width: 300px; height: auto;">
+        <img src="{% static  image  %}" alt="Muhammad Ali" style="width: 300px; height: auto;">
     {% endfor %}
 {% endblock %}
