--- a/mini_fb/templates/mini_fb/base.html
+++ b/mini_fb/templates/mini_fb/base.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MiniFB</title>
-    <link rel="stylesheet" href="/static/mini_fb/styles.css">
+    <link rel="stylesheet" href="{% static 'mini_fb/styles.css' %}">
+
 
 </head>
 <body>
