--- a/mini_fb/templates/mini_fb/show_profile.html
+++ b/mini_fb/templates/mini_fb/show_profile.html
@@ -24,7 +24,7 @@
         <tr>
             <th>Profile Image</th>
             <td>
-                <img src="{{ profile.image_url }}" alt="{{ profile.firstName }}'s Profile Image" width="200">
+                <img src="{% static profile.image_url %}" alt="{{ profile.firstName }}'s Profile Image" width="200">
             </td>
             
         </tr>
