--- a/mini_fb/templates/mini_fb/show_all_profiles.html
+++ b/mini_fb/templates/mini_fb/show_all_profiles.html
@@ -17,7 +17,7 @@
             <td>{{ profile.city }}</td>
             <td>
                 <a href="{% url 'show_profile' profile.pk %}">
-                    <img src="{{ profile.image_url }}" alt="{{ profile.firstName }}'s Profile Image" width="100">
+                    <img src="{% static profile.image_url %}" alt="{{ profile.firstName }}'s Profile Image" width="100">
                 </a>
              <td>
         </tr>
