--- a/mini_fb/templates/mini_fb/delete_status_form.html
+++ b/mini_fb/templates/mini_fb/delete_status_form.html
@@ -1,14 +1,18 @@
-<!--
-delete_status_form.html - Displays...
+<!-- 
+delete_status_form.html - Confirmation page for deleting a status message.
+This page asks the user for confirmation before deleting a status message.
 -->
+
 
 {% extends 'mini_fb/base.html' %}
 {% block content %}
 <h1>Delete Status Message</h1>
 <p>Are you sure you want to delete this status message?</p>
+<!-- Form to confirm deletion -->
 <form method="POST">
     {% csrf_token %}
     <input type="submit" value="Confirm">
 </form>
+<!-- Cancel button redirects user back to the profile page -->
 <a href="{% url 'show_profile' status_message.profile.pk %}">Cancel</a>
 {% endblock %}
