--- a/mini_fb/templates/mini_fb/update_profile_form.html
+++ b/mini_fb/templates/mini_fb/update_profile_form.html
@@ -1,5 +1,6 @@
-<!--
-update_profile_form.html - Displays...
+<!-- 
+update_profile_form.html - Form to update an existing profile.
+Users can edit their profile details and submit changes.
 -->
 
 
@@ -7,10 +8,13 @@ update_profile_form.html - Displays...
 
 {% block content %}
 <h1>Update Profile</h1>
+<!-- Form to update profile details -->
 <form action="" method="POST">
     {% csrf_token %}
+    <!-- Dynamically render form fields -->
     {{ form.as_p }}
     <input type="submit" value="Update">
+    <!-- Cancel button redirects user back to the profile page -->
     <a href="{% url 'show_profile' profile.pk %}">Cancel</a>
 </form>
 {% endblock %}
