--- a/mini_fb/templates/mini_fb/update_status_form.html
+++ b/mini_fb/templates/mini_fb/update_status_form.html
@@ -1,16 +1,20 @@
-<!--
-update_status_form.html - Displays ...
+<!-- 
+update_status_form.html - Form to update an existing status message.
+Users can edit their status message and submit the changes.
 -->
 
 
 {% extends 'mini_fb/base.html' %}
 {% block content %}
 <h1>Update Status Message</h1>
+<!-- Form to update status message -->
 <form method="POST">
     {% csrf_token %}
+    <!-- Render the form fields dynamically -->
     {{ form.as_p }}
     <input type="submit" value="Update">
 </form>
+<!-- Cancel button redirects user back to the profile page -->
 <a href="{% url 'show_profile' object.profile.pk %}">Cancel</a>
 
 
