--- a/mini_fb/templates/mini_fb/show_profile.html
+++ b/mini_fb/templates/mini_fb/show_profile.html
@@ -64,6 +64,7 @@ show_profile.html - Displays profile details, status messages, and images.
         </ul>
         <p><a href="{% url 'friend_suggestions' profile.pk %}">View Friend Suggestions</a></p>
 
+        <p><a href="{% url 'news_feed' profile.pk %}">View News Feed</a></p>
 
 
 
