--- a/mini_fb/templates/mini_fb/create_profile_form.html
+++ b/mini_fb/templates/mini_fb/create_profile_form.html
@@ -4,16 +4,18 @@
 {% extends 'mini_fb/base.html' %}
 
 {% block content %}
-<h1>Create a new Profile</h1>
+<h1>Create a New Profile</h1>
 
-<!-- display the HTML form -->
-<form action="{% url 'create_profile' %}" method="POST">
+<form method="post">
     {% csrf_token %}
-    <table>
-    {{form.as_table}}
-    </table>
 
-    <input type="submit" name="submit" value="Submit">
+    <h3>Account Information</h3>
+    {{ user_form.as_p }}  <!-- User registration form -->
+
+    <h3>Profile Information</h3>
+    {{ form.as_p }}  <!-- Profile creation form -->
+
+    <button type="submit">Create Account & Profile</button>  <!-- The Submit button -->
 </form>
 
 {% endblock %}
