--- a/mini_fb/templates/mini_fb/news_feed.html
+++ b/mini_fb/templates/mini_fb/news_feed.html
@@ -1,7 +1,7 @@
 {% extends 'mini_fb/base.html' %}
 
 {% block content %}
-    <h2>News Feed for {{ profile.firstName }}</h2>
+    <h2>News Feed</h2>
     <ul>
         {% for status in news_feed %}
             <li>
@@ -16,5 +16,5 @@
         {% endfor %}
     </ul>
 
-    <p><a href="{% url 'show_profile' profile.pk %}">Back to Profile</a></p>
+    <p><a href="{% url 'show_profile' pk=request.user.profile.pk %}">Back to Profile</a></p>
 {% endblock %}
