--- a/mini_fb/templates/mini_fb/show_profile.html
+++ b/mini_fb/templates/mini_fb/show_profile.html
@@ -32,43 +32,41 @@ show_profile.html - Displays profile details, status messages, and images.
                 <img src="{{ profile.image_url }}" alt="{{ profile.firstName }}'s Profile Image" class="profile-image">
             </td>
         </tr>
-        <h3>Status Messages</h3>
-        <ul>
-            {% for message in profile.get_status_messages %}
-            <li>{{ message.statusMessage }} - {{ message.published }}
-                <a href="{% url 'update_status' message.pk %}">Update</a>
-                <a href="{% url 'delete_status' message.pk %}">Delete</a>
-                            <br>
-                            {% for img in message.get_images %}
-                                <img src="{{ img.image_file.url }}" alt="Status Image" style="max-width: 300px;">
-                            {% endfor %}
-                        </li>
-                    {% empty %}
-                        <li>No status messages yet.</li>
-                    {% endfor %}
-                </ul>
-                
-        <p><a href="{% url 'create_status' profile.pk %}">Post a Status Message</a></p>
-        <p><a href="{% url 'update_profile' profile.pk %}" class="btn">Update Profile</a></p>
-
-        <h3>Friends</h3>
-        <ul>
-            {% for friend in profile.get_friends %}
-                <li>
-                    <img src="{{ friend.image_url }}" alt="{{ friend.firstName }}'s Profile Image" class="profile-image" style="width:50px; height:50px; border-radius:50%;">
-                    <a href="{% url 'show_profile' friend.pk %}">{{ friend.firstName }} {{ friend.lastName }}</a>
-                </li>
-            {% empty %}
-                <li>No friends yet.</li>
-            {% endfor %}
-        </ul>
-        <p><a href="{% url 'friend_suggestions' profile.pk %}">View Friend Suggestions</a></p>
-
-        <p><a href="{% url 'news_feed' profile.pk %}">View News Feed</a></p>
-
-
-
-
-
     </table>
+    
+    <h3>Status Messages</h3>
+    <ul>
+        {% for message in status_messages %}
+            <li>
+                {{ message.statusMessage }} - {{ message.published }}
+                {% if is_owner %}
+                    <a href="{% url 'update_status' message.pk %}">Edit</a> |
+                    <a href="{% url 'delete_status' message.pk %}">Delete</a>
+                {% endif %}
+            </li>
+        {% empty %}
+            <li>No status messages yet.</li>
+        {% endfor %}
+    </ul>
+    
+    {% if is_owner %}
+        <div class="owner-actions">
+            <a href="{% url 'update_profile' %}">Edit Profile</a> |
+            <a href="{% url 'create_status' %}">Post Status</a> |
+            <a href="{% url 'news_feed' %}">View News Feed</a> |
+            <a href="{% url 'friend_suggestions' %}">View Friend Suggestions</a>
+        </div>
+    {% endif %}
+    
+    <h3>Friends</h3>
+    <ul>
+        {% for friend in profile.get_friends %}
+            <li>
+                <img src="{{ friend.image_url }}" alt="{{ friend.firstName }}'s Profile Image" class="profile-image" style="width:50px; height:50px; border-radius:50%;">
+                <a href="{% url 'show_profile' friend.pk %}">{{ friend.firstName }} {{ friend.lastName }}</a>
+            </li>
+        {% empty %}
+            <li>No friends yet.</li>
+        {% endfor %}
+    </ul>
 {% endblock %}
