--- a/project/templates/project/base.html
+++ b/project/templates/project/base.html
@@ -1,3 +1,10 @@
+<!--
+  base.html
+  This is the base layout template used by all pages in the application.
+  It includes Bootstrap styling, a navbar, and a content block that child
+  templates extend.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
