--- a/project/templates/project/edit_profile.html
+++ b/project/templates/project/edit_profile.html
@@ -1,3 +1,9 @@
+<!--
+  edit_profile.html
+  Page for users to update their profile information including name,
+  location, and profile photo.
+-->
+
 {% extends 'project/base.html' %}
 {% block title %}Edit Profile{% endblock %}
 {% block content %}
