--- a/project/templates/project/list_detail.html
+++ b/project/templates/project/list_detail.html
@@ -1,3 +1,10 @@
+<!--
+  list_detail.html
+  Shows the details of a specific list, including its shared users and
+  the restaurants added. Allows editing notes, sharing the list, and
+  adding/removing restaurants.
+-->
+
 {% extends 'project/base.html' %}
 {% block title %}List Detail{% endblock %}
 
