--- a/project/templates/project/public_profile.html
+++ b/project/templates/project/public_profile.html
@@ -1,3 +1,9 @@
+<!--
+  public_profile.html
+  Public-facing profile page viewable by others. Shows the user's shared
+  lists and profile info, but limits access to only shared content.
+-->
+
 {% extends 'project/base.html' %}
 {% block title %}{{ target_user.username }}'s Profile{% endblock %}
 {% block content %}
