--- a/project/templates/project/restaurant_detail.html
+++ b/project/templates/project/restaurant_detail.html
@@ -1,3 +1,9 @@
+<!--
+  restaurant_detail.html
+  Displays full details of a restaurant, allows logged-in users to add
+  the restaurant to their lists, submit reviews, and remove it from lists.
+-->
+
 {% extends 'project/base.html' %}
 {% block title %}Restaurant Details{% endblock %}
 {% block content %}
