--- a/project/templates/project/restaurant_form.html
+++ b/project/templates/project/restaurant_form.html
@@ -1,3 +1,9 @@
+<!--
+  restaurant_form.html
+  Form page to add or edit a restaurant. Only authenticated users can add,
+  and only the user who added a restaurant can edit it.
+-->
+
 {% extends 'project/base.html' %}
 {% block title %}Add Restaurant{% endblock %}
 {% block content %}
