--- a/project/templates/project/signup.html
+++ b/project/templates/project/signup.html
@@ -1,3 +1,9 @@
+<!--
+  signup.html
+  User registration page using Django's UserCreationForm with email.
+  Redirects to the home page upon successful signup.
+-->
+
 {% extends 'project/base.html' %}
 {% block title %}Sign Up{% endblock %}
 {% block content %}
