--- a/project/templates/project/user_list.html
+++ b/project/templates/project/user_list.html
@@ -1,3 +1,10 @@
+<!--
+  user_list.html
+  Shows all community members (excluding the logged-in user).
+  Includes a search bar to filter by username, profile info, or list names.
+  Links to public profiles of each user.
+-->
+
 {% extends 'project/base.html' %}
 {% block title %}All Users{% endblock %}
 
