--- a/project/templates/project/home.html
+++ b/project/templates/project/home.html
@@ -1,3 +1,9 @@
+<!--
+  home.html
+  The homepage that lists all restaurants and includes a search bar.
+  Extends base.html and displays restaurant cards with links to details.
+-->
+
 {% extends 'project/base.html' %}
 {% block title %}Home{% endblock %}
 
