--- a/project/templates/project/login.html
+++ b/project/templates/project/login.html
@@ -1,3 +1,9 @@
+<!--
+  login.html
+  Login page for user authentication. Uses Django's built-in
+  AuthenticationForm to validate credentials.
+-->
+
 {% extends 'project/base.html' %}
 {% block title %}Login{% endblock %}
 {% block content %}
