--- a/project/templates/project/profile.html
+++ b/project/templates/project/profile.html
@@ -1,3 +1,9 @@
+<!--
+  profile.html
+  Displays the logged-in user's profile details and lists. Includes
+  buttons to edit the profile and create new lists.
+-->
+
 {% extends 'project/base.html' %}
 {% block title %}My Profile{% endblock %}
 {% block content %}
